--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "i18next": "^23.11.5",
     "next": "14.2.4",
+    "next-i18next": "^15.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
