--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,9 @@ jobs:
 
     steps:
     - uses: pnpm/action-setup@v4
+      with:
+        version: 9
+        run_install: false
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
