Create FTP upload action

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,12 @@ jobs:
         cache: 'pnpm'
     - run: pnpm install
     - run: pnpm build
+    - name: Upload ftp
+      uses: genietim/ftp-action@releases/v4
+      with:
+        host: ${{ secrets.FTP_SERVER }}
+        user: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        localDir: ${{ secrets.FTP_FOLDER }}
+        remoteDir: "public_html/tmp"
 
