--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,11 +31,11 @@ jobs:
     - run: pnpm install
     - run: pnpm build
     - name: Upload ftp
-      uses: genietim/ftp-action@releases/v4
+      uses: sebastianpopp/ftp-action@releases/v2
       with:
         host: ${{ secrets.FTP_SERVER }}
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        localDir: ${{ secrets.FTP_FOLDER }}
-        remoteDir: "public_html/tmp"
+        remoteDir: ${{ secrets.FTP_FOLDER }}
+        localDir: "dist"
 
