--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,17 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "*" ]
+    tags: [ "*" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: pnpm/action-setup@v4
@@ -26,7 +21,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 20
         cache: 'pnpm'
     - run: pnpm install
     - run: pnpm build
