--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "accept-language": "^3.0.18",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "i18next": "^23.12.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "lucide-react": "^0.439.0",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
@@ -29,6 +34,7 @@
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "shadcn": "^2.0.3",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4"
   }
