--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "accept-language": "^3.0.18",
+    "accept-language": "^3.0.20",
     "clsx": "^2.1.1",
-    "i18next": "^23.12.2",
+    "i18next": "^23.14.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.0"
+    "react-i18next": "^15.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.12",
-    "@types/react": "^18.3.3",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.45",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.6",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "shadcn": "^2.0.3",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
