--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "accept-language": "^3.0.20",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "i18next": "^23.14.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "lucide-react": "^0.439.0",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.1"
+    "react-i18next": "^15.0.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
